# catsndogs

./: .gitignore  CLAUDE.md  README.md  project_structure.json  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  test_nebula.py
data/dialogue/: aristotle_internal.json  dave_hub.json
data/economy/: economy_data.json  regions.json
data/encounters/: arc1_encounters.json  arc2_encounters.json  arc3_encounters.json  arc4_encounters.json
data/ships/: ship_templates.json
data/side_missions/: arc1_side_missions.json
data/story/: arc_definitions.json
design/art_direction/: art_direction_guide.md
design/ships/: ship_design_specs.md
design/ui_ux/: ui_ux_specification.md
docs/: MASTER_PLAN.md  Whisper_Crystals_Game_Bible.docx
docs/architecture/: TRD-001_Technical_Architecture_Stack.md  TRD-002_Game_Engine_Prototype_Specification.md
docs/archive/: Whisper_Crystals_Project_Brief v2.docx  Whisper_Crystals_Project_Brief.docx  brief_v2.txt
docs/changelog/: CHANGELOG.md
docs/decisions/: ADR_TEMPLATE.md
docs/issues/: ISSUE_LOG.md  ISSUE_TEMPLATE.md
docs/plans/: PLAN-001_Implementation_Master_Plan.md  PLAN-001_Task_Tracker.md
godot/: project.godot
godot/scenes/: main.tscn
tests/: test_code_review_fixes.py  test_crew_morale.py  test_data_loader.py  test_dialogue_format.py  test_economy.py  test_ending_screen.py  test_entities.py  test_exploration.py  test_faction_conquest.py  test_game_state_serialization.py  test_music_manager.py  test_save_manager.py  test_settings.py  test_side_missions.py  test_skip.py  test_sprite_manager.py  test_systems.py
(+197 files in other folders)
